<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sara</string>
    <string name="app_pill_name">Idea Pills</string>
    <string name="listener_name_contacts">Contacts</string>
    <string name="listener_name_app">Apps</string>
    <string name="listener_name_music">Music</string>
    <string name="toast_tip1">Please Tap and Hold the Button Below</string>
    <string name="toast_tip2">and Search for</string>
    <string name="toast_tip3">Contacts, Apps<font size="15">&#160;or&#160;</font>Music</string>
    <string name="toast_tip4">release the button to search</string>
    <string name="contacts_listener_title">Contacts</string>
    <string name="web_search_listener_title">Web Search</string>
    <string name="play_text_call_people">Do you want to call %s</string>
    <string name="pls_say_number">Please speak out the number</string>
    <plurals name="find_people_many_number">
        <item quantity="one">found 1 number</item>
        <item quantity="other">found %d numbers</item>
    </plurals>
    <string name="re_confirm">Sorry, unable to identify your reply, please say again</string>
    <string name="re_say_number">Sorry, unable to identify the number you picked, please say again</string>
    <string name="cancel">Cancel</string>
    <string name="music_title">Songs:&#160; </string>
    <string name="music_album">Albums:&#160;</string>
    <plurals name="music_artist">
        <item quantity="one"><xliff:g id="NAME">%2$s</xliff:g>,&#160;<xliff:g id="COUNT_0">%1$d&#160;</xliff:g> song</item>
        <item quantity="other"><xliff:g id="NAME">%2$s</xliff:g>,&#160;<xliff:g id="COUNT_0">%1$d</xliff:g>&#160; songs</item>
    </plurals>
    <plurals name="music_total">
        <item quantity="one">&#160;1&#160; song</item>
        <item quantity="other">&#160;%d&#160; songs</item>
    </plurals>
    <string name="call_person">Call%s</string>
    <string name="no_result">Unable to identify your command, please say again</string>
    <string name="research">Unable to identify your command, please search again</string>
    <string name="calling_now">Calling&#8230;&#8230;&#8230;</string>
    <string name="record_warning_dialog_title">Unable To Use</string>
    <string name="record_warning_dialog_message">The microphone is occupied by another app, idea pills temporarily unusable.</string>
    <string name="record_warning_dialog_positive_button">Confirm</string>
    <string name="china_unicom">CUCC</string>
    <string name="china_mobile">CMCC</string>
    <string name="china_telecom">CTCC</string>
    <string name="no_result_title">No Result</string>
    <string name="no_result_detail1">Press and hold the button below and speak out</string>
    <string name="no_result_detail2">your contact, app or music, release the button to search</string>
    <string name="headset_no_result_play">No result found, press and hold to activate voice assistant, release and search for contact or music</string>
    <string name="contact_is_forbidden">Unable to bypass your lock screen\nplease adjust your settings in Search and Voice</string>
    <string name="contact_is_forbidden_tts">Unable to bypass your lock screen, please adjust your settings in Search and Voice</string>
    <plurals name="find_many_result">
        <item quantity="one">1 Result Found</item>
        <item quantity="other">%d Results Found</item>
    </plurals>
    <string name="contact_no_result">No Contact Found</string>
    <string name="find_many_contact_result">Multiple results found, please select one on the screen</string>
    <plurals name="find_many_phone_result">
        <item quantity="one">found 1 number, please select one on the screen</item>
        <item quantity="other">found %d numbers, please select one on the screen</item>
    </plurals>
    <string name="control_by_headset">Use the Up and Down keys to select and the middle key to confirm</string>
    <plurals name="some_other">
        <item quantity="one"><xliff:g id="NAME">%2$s</xliff:g> has <xliff:g id="COUNT_0">%1$d</xliff:g> number</item>
        <item quantity="other"><xliff:g id="NAME">%2$s</xliff:g> has <xliff:g id="COUNT_0">%1$d</xliff:g> numbers</item>
    </plurals>
    <string name="headset_guide">Please release the remoter and search after the beep</string>
    <string name="play_music_singer">Songs:&#160;</string>
    <string name="play_music_album">Albums:&#160;</string>
    <string name="play_aritst_music">Play all songs of %s</string>
    <string name="mute_toast">Please unmute the phone and try again</string>
    <string name="random_play">随机播放</string>
    <string name="listen_music">听音乐</string>
    <string name="music">Music</string>
    <string name="random">随机</string>
    <string name="dialtacts_tab_recent">Call Log</string>
    <string name="dialtacts_tab_contacts">Contacts</string>
    <string name="dialtacts_tab_starred">Favorites</string>
    <string name="dialtacts_tab_dialpad">Keypad</string>
    <string name="tabBar_worldclock">World Clock</string>
    <string name="tabBar_alarm">"Alarm"</string>
    <string name="tabBar_stopwatch">Stopwatch</string>
    <string name="tabBar_timer">"Timer"</string>
    <string name="unsupport_tips1">"Voice Search currently only supports Mandarin Chinese."</string>
    <string name="copy_text">Copy number to Clipboard</string>
    <string name="toast_text_copied">Text Copied</string>
    <string name="more_action">More Actions</string>
    <string name="view_contact_detail">View Contact Details</string>
    <string name="btn_share_contact_text">Share Contact as Text</string>
    <string name="btn_share_contact_vcf">Share Contact as Vcf</string>
    <string name="share_contact_subject_context">Share contact: <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="COUNT">%s</xliff:g></string>
    <string name="menu_share">Share</string>
    <string name="missing_name">(No Name)\u0008</string>
    <string name="full_name">Name</string>
    <string name="share_error">This contact cannot be shared</string>
    <string name="agree">"Allow"</string>
    <string name="disagree">"Cancel"</string>
    <string name="loading">"Loading\u2026"</string>
    <string name="permission_tips">Reminder</string>
    <string name="permission_content">"Voice Search requests permission to access your phone's audio recorder, contacts' information, and network certificates. Do you wish to allow this?"</string>
    <string name="data_tracker_detail_recognize_count" translatable="false">语音识别次数分布</string>
    <string name="data_tracker_detail_recognize_all_count" translatable="false">语音识别总次数</string>
    <string name="data_tracker_detail_people_count" translatable="false">语音识别的总人数</string>
    <string name="data_tracker_recognize_all_count_with_result" translatable="false">EVENT_SARA_RECOGNIZE_TOTAL_COUNT_WITH_RESULT</string>
    <string name="data_tracker_recognize_all_count_with_result_contact" translatable="false">EVENT_SARA_RECOGNIZE_TOTAL_COUNT_WITH_RESULT_CONTACT</string>
    <string name="data_tracker_recognize_all_count_with_result_music" translatable="false">EVENT_SARA_RECOGNIZE_TOTAL_COUNT_WITH_RESULT_MUSIC</string>
   <string name="data_tracker_recognize_all_count_with_result_search" translatable="false">EVENT_SARA_RECOGNIZE_TOTAL_COUNT_WITH_RESULT_SEARCH</string>
    <string name="data_tracker_appear_all_count_wechat" translatable="false">EVENT_SARA_WECHAT_SHOW_TOTAL_COUNT</string>
    <string name="data_tracker_click_phone_count" translatable="false">EVENT_SARA_CLICK_PHONE_COUNT</string>
    <string name="data_tracker_click_contact_name_count" translatable="false">EVENT_SARA_CLICK_CONTACT_NAME_COUNT</string>
    <string name="data_tracker_click_mms_count" translatable="false">EVENT_SARA_CLICK_MMS_COUNT</string>
    <string name="data_tracker_click_wechat_count" translatable="false">EVENT_SARA_CLICK_WECHAT_COUNT</string>
    <string name="data_tracker_click_play_count" translatable="false">EVENT_SARA_CLICK_PLAY_MUSIC_COUNT</string>
    <string name="data_tracker_click_app_count" translatable="false">EVENT_SARA_CLICK_APP_COUNT</string>
    <string name="data_tracker_clipboard_count" translatable="false">EVENT_SARA_CLIPBOARD_COUNT</string>
    <string name="btn_delete">Delete</string>
    <string name="finish">"Done"</string>
    <string name="left_slide_lunch_global_pill_tips">"Once enabled, swipe from the right edge of the display to launch Idea Pills globally"</string>
    <string name="enable_idea_pills">Enable</string>
    <string name="idea_pills_beta">Idea Pills</string>
    <string name="idea_pills_beta_intro_msg">This feature is currently in public beta, and is designed for professional users to preview and provide suggestions. Final version will be released in our next system update.</string>
    <string name="default_bubble_color">Default Type</string>
    <string name="note">Note</string>
    <string name="important">Important</string>
    <string name="todo">Today\'s Todo</string>
    <string name="message">Pending</string>
    <string name="inspiration">Idea</string>
    <string name="quick_command_nav_addr">Navigation</string>
    <string name="quick_command_nav_addr_summary">Extract and navigate to the address in selected area</string>
    <string name="quick_command_nav_home">Home</string>
    <string name="quick_command_nav_home_summary">Navigate to home from current address</string>
    <string name="quick_command_web">Launch URL</string>
    <string name="quick_command_web_summary">Extract and jump to URL in the selected area</string>
    <string name="quick_command_translate">Translate</string>
    <string name="quick_command_translate_summary">Translate English words contained in the text</string>
    <string name="quick_command_boom">Big Bang</string>
    <string name="quick_command_boom_summary">Launch Big Bang in current text page</string>
    <string name="quick_command_location">Announce Location</string>
    <string name="quick_command_location_summary">Announce current location information</string>
    <string name="quick_command_scan_wx">WeChat Scan</string>
    <string name="quick_command_scan_wx_summary">Launch WeChat Scan feature</string>
    <string name="quick_command_wechat_pay">WeChat Pay</string>
    <string name="quick_command_wechat_pay_summary">Launch WeChat payment QRCode</string>
    <string name="quick_command_scan_zfb">Alipay Scan</string>
    <string name="quick_command_scan_zfb_summary">Launch Alipay Scan feature</string>
    <string name="quick_command_zfb_pay">Alipay Pay</string>
    <string name="quick_command_zfb_pay_summary">Launch Alipay payment QRCode</string>
    <string name="quick_command_time">Announce Time</string>
    <string name="quick_command_time_summary">Announce current time information</string>
    <string name="quick_command_home_info_hint">Please enter your home address</string>
    <string name="left_slide_body">Swipe from the right edge of the display to launch Idea Pills globally</string>
    <string name="idea_pills_beta_version" translatable="false">beta 2</string>
    <string name="voice_commond_intro">Voice command introduction</string>
    <string name="voice_commond_title">Voice command</string>
    <string name="voice_commond_title_tip_ideapill_key">You can press Shortcut and Volume Down key simutaneously, speak out your tag name to trigger a feature</string>
    <string name="voice_commond_shortcut">Shortcuts</string>
    <string name="voice_commond_shortcut_tip_ideapill_key">You can press Shortcut and Volume Down key simutaneously, speak out your command and the system will jump to result page automatically</string>
    <string name="voice_commond_time_default">00:00</string>
    <string name="search_result">Search Results</string>
    <string name="search_result_empty">No search results</string>
    <string name="tips_no_result">No Results</string>
    <string name="tips_detail1">请按住下方按钮，并说出你想查找的</string>
    <string name="tips_detail2">联系人，松手搜索</string>
</resources>