<?xml version="1.0" encoding="utf-8"?>
<com.smartisanos.sara.bubble.view.BubbleColorChooserLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_color_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/note"
        android:src="@drawable/sign_blue" />

    <ImageView
        android:id="@+id/iv_color_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/important"
        android:src="@drawable/sign_red" />

    <ImageView
        android:id="@+id/iv_color_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/sign_oranges" />

    <ImageView
        android:id="@+id/iv_color_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/message"
        android:src="@drawable/sign_green" />

    <ImageView
        android:id="@+id/iv_color_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/inspiration"
        android:src="@drawable/sign_purple" />

    <ImageView
        android:id="@+id/iv_color_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sign_share" />

    <ImageView
        android:id="@+id/iv_color_navy_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ppt_sign" />
</com.smartisanos.sara.bubble.view.BubbleColorChooserLayout>