<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_inputopt"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_cancel"
        android:contentDescription="@string/btn_delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#FFFFFFFF"
        android:textSize="13.5sp" />

    <View
        android:id="@+id/iv_bubble_line3"
        android:layout_width="4px"
        android:layout_height="match_parent"
        android:layout_marginTop="-1dp"
        android:background="@drawable/divider_line_vertical" />

    <TextView
        android:id="@+id/tv_finish"
        android:contentDescription="@string/finish"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="#FFFFFFFF"
        android:textSize="13.5sp" />

</LinearLayout>