<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bullet_search_empty_all"
        android:layout_marginRight="-15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="182dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/tips_no_result"
            android:textColor="#858585"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tips_detail1"
            android:textColor="#999999"
            android:textSize="13sp"
            android:visibility="gone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:paddingTop="4dp"
            android:text="@string/tips_detail2"
            android:textColor="#999999"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>