<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"
            android:text="@string/idea_pills_beta"
            android:textColor="#cc000000"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/idea_pills_beta_version"
            android:textColor="#66000000"
            android:textSize="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="2dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/idea_pills_beta_intro_msg"
            android:textColor="#80000000"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="6dp"
        android:gravity="center">

        <smartisanos.widget.ShadowButton
            android:id="@+id/id_btn_next"
            android:layout_width="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/enable_idea_pills"
            style="@smartisanos:style/LongButton.Highlight"/>
    </LinearLayout>
</RelativeLayout>
