<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/settings_item_top_bottom_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/home_info_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_info_general_margin"
            android:layout_marginRight="@dimen/home_info_general_margin"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/message_field"
            android:hint="@string/quick_command_home_info_hint"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingLeft="@dimen/home_info_general_margin"
            android:paddingRight="@dimen/home_info_general_margin" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@drawable/top_shadow"/>

        <LinearLayout
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginLeft="@dimen/home_info_general_margin"
                android:gravity="center_vertical"
                android:text="@string/search_result"
                android:textColor="#66000000"
                android:textSize="13.5sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@smartisanos:drawable/list_divider_drawable" />

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="122dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle_no_result"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="22dp"
                    android:gravity="center"
                    android:text="@string/search_result_empty"
                    android:textColor="#26000000"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>